homework_2/k8s/otus-homework-2-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-2-deployment # The resource name
  namespace: otus
  labels:
    app: homework-2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-2
  template:
    metadata:
      labels:
        app: homework-2
    spec:
      containers:
        - name: otus-homework-2 # The container name
          image: dmitryprigozhaev/otus-homework-2:v7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe: # Check pod init
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
              httpHeaders:
                - name: Custom-Header
                  value: OTUS
            initialDelaySeconds: 30 # Timeout before first request
            periodSeconds: 20       # Survey frequency
          livenessProbe: # Check pod status
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
              httpHeaders:
                - name: Custom-Header
                  value: OTUS
            initialDelaySeconds: 30 # Timeout before first request
            periodSeconds: 20       # Survey frequency
        - name: tcpflow # to debug
          image: appropriate/tcpflow
          imagePullPolicy: IfNotPresent
        - name: mariadb # to debug db connect
          image: mariadb
          imagePullPolicy: IfNotPresent
          command:
            - sleep
            - "1000"
