homework_2/k8s/otus-homework-2-mariadb-stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
  namespace: otus
spec:
  serviceName: mariadb-service
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template: # blueprint for pods
    metadata:
      labels:
        app: mariadb # service will look for this label
    spec: # specification for pods
      containers: # we can have one or more containers
        - name: mariadb
          image: mariadb # latest
          ports:
            - containerPort: 3306
              name: mariadb-port
          volumeMounts:
            - name: datadir
              mountPath: /var/lib/mysql/
  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 300M
