homework_2/k8s/otus-homework-2-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-2-service # The resource name
  namespace: otus
spec:
  type: ClusterIP # Provides the Service on the internal IP of the cluster
  selector:
    app: homework-2
  ports:
    - protocol: TCP
      port: 8000 # Service port
      targetPort: 8000 # Application port inside pod labeled 'homework-2'
