homework_2/k8s/otus-homework-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-2-ingress
  namespace: otus
spec:
  ingressClassName: nginx # kube v1.22+
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homework-2-service
                port:
                  number: 8000
